Feature/track list (#5)
* Track list - create

* Mini player - created

* Art detail - disable scrolling in appbar

* Mini player - update gradient color

* Player - design animation between mini and full player

* Player - click to over full screen

* Player - add toolbar

* Player - add toolbar

* Player - add toolbar

* Player - add collapse button in toolbar

* Player - add play controll fragment

* Artist list to detail - add share element

* Artist list: show cache image first

Co-authored-by: Phong Huynh <phonghdt@vng.com.vn>

--- a/androidApp/src/main/res/layout/item_track.xml
+++ b/androidApp/src/main/res/layout/item_track.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="item"
-            type="com.wind.deezerkmp.shared.domain.model.Album" />
+            type="com.wind.deezerkmp.shared.domain.model.Track" />
     </data>
 
 
@@ -24,7 +24,7 @@
             android:layout_height="@dimen/album_item_size"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            app:image="@{item.model.pictureMedium}"
+            app:image="@{item.album.model.pictureMedium}"
             app:requestManager="@{rm}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -34,7 +34,7 @@
             android:id="@+id/tvPrimary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/space_pretty_small"
             android:ellipsize="end"
             android:maxLines="2"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
@@ -52,11 +52,11 @@
             android:id="@+id/tvSecondary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/space_pretty_small"
             android:layout_marginTop="@dimen/space_vertical_text_to_text"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="@{item.releaseDate}"
+            android:text="@{String.valueOf(item.duration)}"
             app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
