--- a/androidApp/src/main/res/layout/fragment_artist_detail.xml
+++ b/androidApp/src/main/res/layout/fragment_artist_detail.xml
@@ -23,9 +23,9 @@
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:layout_behavior=".util.DisableAppbarScrollingBehavior">
 
-            <!--            fixme change the contentScrim to color pallete-->
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsingToolbar"
                 android:layout_width="match_parent"
@@ -111,6 +111,7 @@
                 app:tabIndicatorFullWidth="false"
                 app:tabTextColor="@color/selector_tab_indicator_text"
                 app:tabTextAppearance="@style/TabTextStyle"
+                android:background="?android:attr/colorBackground"
                 app:tabMode="fixed" />
 
         </com.google.android.material.appbar.AppBarLayout>
