--- a/androidApp/src/main/res/layout/item_artist.xml
+++ b/androidApp/src/main/res/layout/item_artist.xml
@@ -24,11 +24,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
+            android:scaleType="center"
             app:image="@{item.model.pictureMedium}"
             app:requestManager="@{rm}"
             app:riv_dimensionRatio="1:1"
             app:shapeAppearance="?attr/shapeAppearanceCircleComponent"
+            app:useOverride="@{true}"
             tools:src="@tools:sample/avatars" />
 
         <TextView
